<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/new_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_nama"
            android:inputType="textPersonName"
            android:lines="1"
            android:autofillHints="Your Name here..."/>

        <EditText
            android:id="@+id/new_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_alamat"
            android:inputType="text"
            android:lines="2"
            android:autofillHints="Your Address here..."/>

        <EditText
            android:id="@+id/new_no_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_no_hp"
            android:inputType="number"
            android:lines="1"
            android:autofillHints="Your Phone here..."/>
        <EditText
            android:id="@+id/jkel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_jkel"
            android:inputType="text"
            android:lines="1"
            android:autofillHints="Your Phone here..."/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hobby"
            android:textSize="12sp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerJK"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:gravity="end">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_update"
                android:textAllCaps="false"
                android:backgroundTint="@color/fui_bgTwitter"
                android:shadowColor="#FFFFFF"
                android:shadowRadius="20"
                android:textColor="@color/white"
                android:layout_marginEnd="50dp"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>